# KungFu

./: .gitignore  CMakeLists.txt  README.md
include/: Camera.h  Mesh.h  Model.h  Npc.h  Player.h  Shader.h  glad.h  glheader.h
src/: Camera.cpp  Npc.cpp  Player.cpp  Shader.cpp  glad.c  main.cpp  stb_image.cpp
src/Models/character1/: character.mtl
src/Models/character2/: character2.mtl
src/Models/donut/: Donut.mtl
src/Models/ground/: ground.mtl
src/Models/monkey/: monkey.mtl
src/Shaders/: character.frag  character.vert  fragmentShaderSource1.frag  fragmentShaderSource2.frag  object.frag  object.vert  vertexShaderSource.vert
